# nlba

./: .gitignore  GEMINI.md  pyproject.toml
ai/: files.md  project.md  rules.md  tasks.md
src/nlba/: command_executor.py  config_manager.py  llm_interface.py  nlba.py
tests/: conftest.py  test_nlba.py  test_summarize.py
